# scrape_car_listings_cursor

./: .gitignore  CLAUDE.md  CURSOR.md  HIERARCHICAL_STRUCTURE.md  README.md  debug_images.py  debug_page.html  main.py  pyproject.toml  requirements.txt  test_single_listing.py
examples/: __init__.py  basic_usage.py  hierarchical_save.py
src/: __init__.py  conftest.py
src/models/: __init__.py  car_listing.py  scraper_config.py
src/models/tests/: test_car_listing.py
src/scraper/: __init__.py  browser_manager.py  cars_scraper.py  listing_extractor.py
src/utils/: __init__.py  file_utils.py
